# vkgsplat

./: .gitignore  CMakeLists.txt
data/: camera.py  converter.py  dataset_readers.py  loader.py
src/: App.cpp  GaussianRenderer.hpp  SortUtils.h
src/Adam/: Adam.cs.slang  Adam.hpp  BufferGradient.hpp  BufferGradient.slang
src/PointCloudRenderer/: CreateSortPairs.cs.slang  PointCloudRenderer.3d.slang  PointCloudRenderer.cs.slang  PointCloudRenderer.hpp
src/Scene/: GaussianScene.hpp  GaussianScene.slang  PointCloud.slang  PointCloudScene.hpp  PointCloudScene.slang
